tests/testFiles/semanticErrors/callfunctionbeforedeclaration.meme
hi();

you: hi()
me, an intellectual: {
  dicks.out("hi");
}
